--- a/deb/openmediavault/debian/rules
+++ b/deb/openmediavault/debian/rules
@@ -11,12 +11,16 @@ include ../openmediavault.mk
 override_dh_auto_clean:
 	rm -rf workbench/node_modules/
 	rm -rf workbench/dist/
+	rm -rf workbench-vue/node_modules/
+	rm -rf workbench-vue/dist/
 
 override_dh_auto_build:
 	cd workbench && npm ci && npm run build:prod
+	cd workbench-vue && npm ci && npm run build
 
 override_dh_auto_install:
 	dh_install --verbose workbench/dist/openmediavault-workbench/* var/www/openmediavault
+	dh_install --verbose workbench-vue/dist/* var/www/openmediavault/vue
 
 override_dh_installinit:
 	# Install the /etc/default/openmediavault file.
