--- a/deb/openmediavault/workbench-vue/package.json
+++ b/deb/openmediavault/workbench-vue/package.json
@@ -11,9 +11,12 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vuetify": "^3.7.1",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@pinia/testing": "^1.0.2",
@@ -23,6 +26,7 @@
     "jsdom": "^24.0.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
+    "vite-plugin-vuetify": "^2.0.4",
     "vitest": "^1.6.0"
   }
 }
