fix missing icon - add new draft state image

--- a/deb/openmediavault/workbench-vue/public/assets/navigation-config.json
+++ b/deb/openmediavault/workbench-vue/public/assets/navigation-config.json
@@ -378,7 +378,7 @@
         "path": "usermgmt.users",
         "text": "Users",
         "url": "/usermgmt/users",
-        "icon": "mdi-user",
+        "icon": "mdi-users",
         "position": 20
       },
       {
